--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
 <body>
   <main>
     <h1>Mark Static App</h1>
+    
+    <a href="https://jolly-mud-0d5abf303.2.azurestaticapps.net/.auth/login/aad">Login</a> | <a href="https://jolly-mud-0d5abf303.2.azurestaticapps.net/.auth/login/aad">Logoff</a> | 
   </main>
 </body>
 
