--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,9 @@
     
     <a href="https://jolly-mud-0d5abf303.2.azurestaticapps.net/.auth/login/aad">Login</a> | 
     <a href="https://jolly-mud-0d5abf303.2.azurestaticapps.net/.auth/logout">Logoff</a> | 
-    <a href="https://jolly-mud-0d5abf303.2.azurestaticapps.net/.auth/me">Me</a> 
+    <a href="https://jolly-mud-0d5abf303.2.azurestaticapps.net/.auth/me">Me</a> |
+    <a href="https://jolly-mud-0d5abf303.2.azurestaticapps.net/secret/index.html">Secret Area 
+
   </main>
 </body>
 
